--- a/src/components/page-shared/section-nav/section-nav.module.css
+++ b/src/components/page-shared/section-nav/section-nav.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 60px;
+  padding: 20px var(--container-padding);
   position: fixed;
   top: 0 !important;
   left: 0;
